apps/hoarder/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
    spec:
      containers:
        - name: web
          image: ghcr.io/hoarder-app/hoarder:0.23.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: hoarder/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hoarder-pvc
