apps/hoarder/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoarder-web-ingress
  namespace: hoarder
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: hoarder.veirt.web.id
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hoarder-web-service
                port:
                  number: 3000
  tls:
    - hosts:
        - hoarder.veirt.web.id
      secretName: hoarder-tls
